# BootstrapApplications

./: CMakeLists.txt  README.md  appicon.h  appicon.rc  main.cpp  main_win.cpp
